customer-service/k8s/customer-pgadmin.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: customer-pgadmin-statefulset
  namespace: slanza
  labels:
    app: customer-pgadmin
spec:
  serviceName: customer-pgadmin
  replicas: 1
  selector:
    matchLabels:
      app: customer-pgadmin
  template:
    metadata:
      labels:
        app: customer-pgadmin
    spec:
      containers:
        - name: customer-pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 5050
          volumeMounts:
            - name: customer-pgadmin-persistent-storage
              mountPath: /var/lib/
              subPath: pgadmin
  volumeClaimTemplates:
    - metadata:
        name: customer-pgadmin-persistent-storage
      spec:
        storageClassName: cdk-cinder
        accessModes: [ "ReadWriteMany" ]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: customer-pgadmin-service
  namespace: slanza
spec:
  selector:
    app: customer-pgadmin
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
