customer-service/k8s/customer-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: customer-postgres-statefulset
  namespace: slanza
  labels:
    app: customer-postgres
spec:
  serviceName: customer-postgres
  replicas: 1
  selector:
    matchLabels:
      app: customer-postgres
  template:
    metadata:
      labels:
        app: customer-postgres
    spec:
      containers:
        - name: customer-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: customer-postgres-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: customer-postgres-persistent-storage
      spec:
        storageClassName: cdk-cinder
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: customer-postgres-service
  namespace: slanza
spec:
  selector:
    app: customer-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
