customer-service/k8s/customer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-spring-app-deployment
  namespace: slanza
  labels:
    app: customer-spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-spring-app
  template:
    metadata:
      labels:
        app: customer-spring-app
    spec:
      containers:
        - name: customer-spring-app
          image: silviolanza/customer-spring-app
          ports:
            - containerPort: 8080
          #imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: customer-spring-app-service
  namespace: slanza
spec:
  selector:
    app: customer-spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
